# tic_tac_toe

./: pyproject.toml
tic_tac_toe/: main.py
tic_tac_toe/game/: base.py  classic.py  limited.py
tic_tac_toe/game_type/: base.py  blind.py  classic.py  limited.py
tic_tac_toe/player/: base.py  human.py  ia.py
tic_tac_toe/setup/: game.py  players.py
